--- a/src/global.css
+++ b/src/global.css
@@ -10,6 +10,11 @@
   overflow: hidden;
 }
 
+#app {
+  max-height: 100vh;
+  overflow: auto;
+}
+
 .toast {
   @apply flex flex-col items-center justify-center absolute right-4 top-4 w-52 h-[54px] px-4 transition-all duration-300 rounded;
 }
