--- a/src/global.css
+++ b/src/global.css
@@ -4,7 +4,7 @@
 
 :root {
   background-color: rgb(21 19 19);
-  background-image: linear-gradient(169deg, #201a3c, #290e1b);
+  background-image: linear-gradient(142deg, #000, #211b3c);
   color: #e5e5e5;
   color-scheme: dark;
   min-height: 100vh;
