--- a/src/global.css
+++ b/src/global.css
@@ -78,3 +78,7 @@ main #script-selector {
   @apply rounded border border-white border-opacity-10 bg-neutral-100 bg-opacity-25 px-1;
   font-size: 10px;
 }
+
+button:disabled {
+  @apply opacity-50 grayscale pointer-events-none;
+}
